--- a/public/index.html
+++ b/public/index.html
@@ -5,6 +5,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Welcome to Firebase Hosting</title>
 
+    <link rel="icon" type="image/x-icon" href="/favicon.ico" />
+    <link rel="shortcut icon" href="/favicon.ico" />
+
     <!-- update the version number as needed -->
     <script defer src="/__/firebase/11.4.0/firebase-app-compat.js"></script>
     <!-- include only the Firebase features as you need -->
